--- a/djangoapp/templates/base.html
+++ b/djangoapp/templates/base.html
@@ -1,13 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<!DOCUMENT html>
+<head>
+<meta charset='utf-8'>
+    <title>{% block title %}{% endblock %}</title>
+    
+</head>
+<body>
+    <h3>This is the base.html</h3>
+    
+<a href="{% url 'home' %}">Home</a>
+<a href="{% url 'signup' %}">Sign Up</a>
+<a href="{% url 'login' %}">Login</a>
+<a href="{% url 'logout' %}">Logout</a>
+<hr>
 
-    <title>{% block title %} {% endblock %}</title>
-  </head>
-  <body>
-    <h2>This is the base page</h2>
-    <hr />
-    {% block content %} {% endblock %}
-  </body>
+    {% block content %}
+    
+    {% endblock %}
+</body>
 </html>
