--- a/djangoapp/templates/home.html
+++ b/djangoapp/templates/home.html
@@ -1,3 +1,10 @@
-{% extends 'base.html' %} {% block content%}
-<h3>...this is the home page content</h3>
-{% endblock %}
+{% extends 'base.html' %} {% block content %}
+<h3>This is where our home page content goes...<br /></h3>
+
+{% if user.is_authenticated %}
+<a href="{% url 'login' %}">Login</a>
+<h2>You are logged in as {{ user.username }}</h2>
+{% else %}
+<a href="{% url 'home' %}">Home</a>
+<a href="{% url 'signup' %}">Sign Up</a>
+{% endif %} {% endblock %}
