--- a/djangoapp/templates/base.html
+++ b/djangoapp/templates/base.html
@@ -5,16 +5,24 @@
     
 </head>
 <body>
-    <h3>This is the base.html</h3>
-    
-<a href="{% url 'home' %}">Home</a>
+  <h3>logo</h3>
+  {% if user.authentifated %}
+  <h6>You are logged in as {{ user.username }}</h6>
+  {% endif %}
+  {% if user.is_authenticated %} 
+  <a href="{% url 'home' %}">Home</a>
+<a href="{% url 'logout' %}">Log out</a>
+{% else %}
+
 <a href="{% url 'signup' %}">Sign Up</a>
 <a href="{% url 'login' %}">Login</a>
-<a href="{% url 'logout' %}">Logout</a>
-<hr>
 
-    {% block content %}
-    
-    {% endblock %}
+{% endif %}
+
+
+
+ 
+  {% block content %} 
+  {% endblock %}
 </body>
 </html>
